Added webos_linker_options to CMake files. Fixed CURLE_OBSOLETE4 issue.
Change-Id: Ie86df4cfd2701fd54009b84d9676f2f274cc29c1

--- a/mojomail/imap/CMakeLists.txt
+++ b/mojomail/imap/CMakeLists.txt
@@ -24,9 +24,10 @@ include(webOS/webOS)
 webos_modules_init(1 0 0 QUALIFIER RC2)
 webos_component(2 0 0)
 
-set(CMAKE_EXE_LINKER_FLAGS, "-Wl --unresolved-symbols=ignore-in-shared-libs")
 webos_add_compiler_flags(ALL "-DMOJ_LINUX -DMOJ_X86")
 webos_add_compiler_flags(ALL "-O -ggdb -Wuninitialized -Winit-self")
+
+webos_add_linker_options(ALL "--unresolved-symbols=ignore-in-shared-libs -rpath-link ${WEBOS_INSTALL_ROOT}/lib")
 
 webos_machine_dep()
 
