fix Upstart 1.8 file start on
:Release Notes:
createLocalAccount.conf was set to start on started
<codename>-luna-surface-manager which is much earlier than needed.

:Detailed Notes:
This job really doesn't need to get started that early, so moving to
the later "stopped configurator" makes the most sense.

:Testing Performed:
This was tested as part of the miniBAT attached to GF-17224

:QA Notes:

:Issues Addressed:
[GF-17224] change name of upstart 1.8 file to remove codename

Open-webOS-DCO-1.0-Signed-off-by: Ed Chejlava <ed.chejlava@lge.com>

Change-Id: Idc8c26a202f688ed34e5f821d84b5e2c2dbbf1c4
Reviewed-on: https://g2g.palm.com/3132
Reviewed-by: Build Verification
Reviewed-by: Sangwoo Kang <sangwoo82.kang@lge.com>
Reviewed-by: Ed Chejlava <ed.chejlava@lge.com>
Tested-by: Ed Chejlava <ed.chejlava@lge.com>

--- a/com.palm.service.accounts/files/etc/init/createLocalAccount.conf
+++ b/com.palm.service.accounts/files/etc/init/createLocalAccount.conf
@@ -18,7 +18,7 @@
 
 description "calls account services to create a local account if it doesn't exist"
 
-start on started starfish-luna-surface-manager
+start on stopped configurator
 emits first-use-profile-created first-use-finished
 
 # Comment this line out to suppress logs on the console
